@@ -1,3 +1,10 @@
+2006-01-22  Mark Kettenis  <kettenis@gnu.org>
+
+	* sparc-tdep.c (sparc32_return_value): Convert to use
+	RETURN_VALUE_ABI_PRESERVES_ADDRESS instead of
+	RETURN_VALUE_STRUCT_CONVENTION.
+	(sparc32_extract_struct_value_address): Remove.
+
 2006-01-21  Daniel Jacobowitz  <dan@codesourcery.com>
 
 	* avr-tdep.c (avr_address_to_pointer, avr_pointer_to_address)
